fix double scrollbar in editors

--- a/mnote-styles/modules/editor.scss
+++ b/mnote-styles/modules/editor.scss
@@ -5,9 +5,11 @@
   .editor-container {
     width: 100%;
     height: 100%;
-    overflow: auto;
     box-sizing: border-box;
+  }
 
+  .editor-container {
+    overflow: auto;
     @include scrollbar.scrollbar(map-get($theme, bg-secondary));
   }
 }
